--- a/project.config.json
+++ b/project.config.json
@@ -50,7 +50,7 @@
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
   "condition": {},
-  "appid": "wx88efc5bd3db8d0ed",
+  "appid": "wx3bea4610a9ef238d",
   "libVersion": "2.26.0",
   "editorSetting": {
     "tabIndent": "insertSpaces",
