--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,5 +3,18 @@
   "projectname": "enjoy-plus",
   "setting": {
     "compileHotReLoad": true
+  },
+  "condition": {
+    "miniprogram": {
+      "list": [
+        {
+          "name": "登录",
+          "pathName": "pages/login/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        }
+      ]
+    }
   }
 }
